<?xml version="1.0" encoding="utf-8"?>
<!-- Calendar and share are for everyone. Edit and delete are shown to admins and to the
     organizer who created the event. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_to_calendar"
        android:icon="@drawable/ic_event"
        android:title="@string/add_to_calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share_event"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit_event"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_event"
        app:showAsAction="never" />
</menu>
