<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_events"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <!-- "Signed in as <email>". Not tappable; the email lives here so the toolbar only needs the role. -->
    <item
        android:id="@+id/action_account"
        android:enabled="false"
        android:title=""
        app:showAsAction="never" />

    <!-- Shown only to admins. -->
    <item
        android:id="@+id/action_manage_organizers"
        android:title="@string/manage_organizers"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never" />
</menu>
